refactor : 모범 답안 참고하여 코드 수정